<resources>
    <string name="app_name">authentication</string>
    <string name="login">Login</string>
    <string name="log_into_your_account">Log into your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="create_your_account">Create your account</string>
    <string name="register">Register</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>